chore(floor): improve object creation